[project]
name = "market-sage-tools"
version = "0.1.0"
description = "CLI tools for Market Sage — Indian Stock Market Analyzer"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "yfinance>=0.2.40",
    "polars>=1.0.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.scripts]
ms-screener      = "market_sage.screener:app"
ms-quotes        = "market_sage.quotes:app"
ms-portfolio     = "market_sage.portfolio:app"
ms-dcf           = "market_sage.dcf:app"
ms-technicals    = "market_sage.technicals:app"
ms-nav           = "market_sage.mf_nav:app"
ms-us-quotes     = "market_sage.us_quotes:app"
ms-us-technicals = "market_sage.us_technicals:app"
ms-us-etf        = "market_sage.us_etf:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/market_sage"]
